// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data/Operation should match snapshot 1`] = `
<div>
  <section
    class="css-1ge35cc"
  >
    <div
      class="actiontech-page-header-namespace css-1xspr0w"
    >
      <div
        class="title"
      >
        权限组
      </div>
      <div
        class="extra"
      />
    </div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-1kh50jg"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center full-width-element flex-space-between actiontech-table-toolbar-namespace css-c38ntt"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <span
                      class="ant-input-affix-wrapper basic-input-wrapper actiontech-table-search-input-namespace css-1f6svkh ant-input-affix-wrapper-sm css-dev-only-do-not-override-mlhibv"
                    >
                      <input
                        class="ant-input ant-input-sm css-dev-only-do-not-override-mlhibv"
                        id="actiontech-table-search-input"
                        placeholder="输入关键字搜索"
                        type="text"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <svg
                          class="custom-icon custom-icon-search"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m10.518 9.693 2.499 2.498-.826.825-2.498-2.498a5.252 5.252 0 0 1-8.527-4.101 5.25 5.25 0 0 1 5.25-5.25 5.252 5.252 0 0 1 4.102 8.526m-1.17-.433a4.082 4.082 0 0 0-2.931-6.927 4.08 4.08 0 0 0-4.084 4.084 4.082 4.082 0 0 0 6.927 2.93z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-czn7jp ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
                      style="padding: 0px 6px 0px 10px;"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-czn7jp ant-space-horizontal ant-space-align-center css-1nt49ug"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 2px;"
                        >
                          筛选
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <svg
                            color="currrentColor"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                              fill="currentColor"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-czn7jp ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
                      disabled=""
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="custom-icon custom-icon-refresh"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
        >
          <div
            class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-table ant-table-empty ant-table-scroll-horizontal"
              >
                <div
                  class="ant-table-container"
                >
                  <div
                    class="ant-table-content"
                    style="overflow-x: auto; overflow-y: hidden;"
                  >
                    <table
                      style="min-width: 100%; table-layout: auto;"
                    >
                      <colgroup>
                        <col
                          style="width: 180px;"
                        />
                        <col
                          style="width: 180px;"
                        />
                        <col
                          style="width: 240px;"
                        />
                        <col
                          style="width: 240px;"
                        />
                      </colgroup>
                      <thead
                        class="ant-table-thead"
                      >
                        <tr>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          >
                            权限组名
                          </th>
                          <th
                            class="ant-table-cell custom-table-cell"
                            scope="col"
                          >
                            权限映射适用种类
                          </th>
                          <th
                            class="ant-table-cell custom-table-cell"
                            scope="col"
                          >
                            适用范围
                          </th>
                          <th
                            class="ant-table-cell custom-table-cell"
                            scope="col"
                          >
                            操作
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="ant-table-tbody"
                      >
                        <tr
                          aria-hidden="true"
                          class="ant-table-measure-row"
                          style="height: 0px; font-size: 0px;"
                        >
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-placeholder"
                        >
                          <td
                            class="ant-table-cell"
                            colspan="4"
                          >
                            <div
                              class="ant-table-expanded-row-fixed"
                              style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                            />
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Data/Operation should match snapshot 2`] = `
<div>
  <section
    class="css-1ge35cc"
  >
    <div
      class="actiontech-page-header-namespace css-1xspr0w"
    >
      <div
        class="title"
      >
        权限组
      </div>
      <div
        class="extra"
      />
    </div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-1kh50jg"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center full-width-element flex-space-between actiontech-table-toolbar-namespace css-c38ntt"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <span
                      class="ant-input-affix-wrapper basic-input-wrapper actiontech-table-search-input-namespace css-1f6svkh ant-input-affix-wrapper-sm css-dev-only-do-not-override-mlhibv"
                    >
                      <input
                        class="ant-input ant-input-sm css-dev-only-do-not-override-mlhibv"
                        id="actiontech-table-search-input"
                        placeholder="输入关键字搜索"
                        type="text"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <svg
                          class="custom-icon custom-icon-search"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m10.518 9.693 2.499 2.498-.826.825-2.498-2.498a5.252 5.252 0 0 1-8.527-4.101 5.25 5.25 0 0 1 5.25-5.25 5.252 5.252 0 0 1 4.102 8.526m-1.17-.433a4.082 4.082 0 0 0-2.931-6.927 4.08 4.08 0 0 0-4.084 4.084 4.082 4.082 0 0 0 6.927 2.93z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-czn7jp ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
                      style="padding: 0px 6px 0px 10px;"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-czn7jp ant-space-horizontal ant-space-align-center css-1nt49ug"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 2px;"
                        >
                          筛选
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <svg
                            color="currrentColor"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                              fill="currentColor"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-czn7jp ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="custom-icon custom-icon-refresh"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
        >
          <div
            class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-table ant-table-scroll-horizontal"
              >
                <div
                  class="ant-table-container"
                >
                  <div
                    class="ant-table-content"
                    style="overflow-x: auto; overflow-y: hidden;"
                  >
                    <table
                      style="min-width: 100%; table-layout: auto;"
                    >
                      <colgroup>
                        <col
                          style="width: 180px;"
                        />
                        <col
                          style="width: 180px;"
                        />
                        <col
                          style="width: 240px;"
                        />
                        <col
                          style="width: 240px;"
                        />
                      </colgroup>
                      <thead
                        class="ant-table-thead"
                      >
                        <tr>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          >
                            权限组名
                          </th>
                          <th
                            class="ant-table-cell custom-table-cell"
                            scope="col"
                          >
                            权限映射适用种类
                          </th>
                          <th
                            class="ant-table-cell custom-table-cell"
                            scope="col"
                          >
                            适用范围
                          </th>
                          <th
                            class="ant-table-cell custom-table-cell"
                            scope="col"
                          >
                            操作
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="ant-table-tbody"
                      >
                        <tr
                          aria-hidden="true"
                          class="ant-table-measure-row"
                          style="height: 0px; font-size: 0px;"
                        >
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="27-MySQL,OceanBaseMySQL"
                        >
                          <td
                            class="ant-table-cell"
                          >
                            <span
                              class="ant-typography consolidated-column css-dev-only-do-not-override-bj9uhl"
                            >
                              查询
                            </span>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                MySQL
                              </div>
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                OceanBaseMySQL
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Database
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Table
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Database
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Table
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    select
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    select
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="96-MySQL,OceanBaseMySQL"
                        >
                          <td
                            class="ant-table-cell"
                          >
                            <span
                              class="ant-typography consolidated-column css-dev-only-do-not-override-bj9uhl"
                            >
                              变更
                            </span>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                MySQL
                              </div>
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                OceanBaseMySQL
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Service
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Database
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Table
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    select
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    add
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    add
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="36-MySQL,OceanBaseMySQL"
                        >
                          <td
                            class="ant-table-cell"
                          >
                            <span
                              class="ant-typography consolidated-column css-dev-only-do-not-override-bj9uhl"
                            >
                              导出
                            </span>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                MySQL
                              </div>
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                OceanBaseMySQL
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Database
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Database
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Table
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    update
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    select
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    remove
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    add
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    update
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
              <ul
                class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
              >
                <li
                  class="ant-pagination-total-text"
                >
                  <span>
                    共 3 条数据
                  </span>
                </li>
                <li
                  aria-disabled="true"
                  class="ant-pagination-prev ant-pagination-disabled"
                  title="Previous Page"
                >
                  <button
                    class="ant-pagination-item-link"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="left"
                      class="anticon anticon-left"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="left"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                  tabindex="0"
                  title="1"
                >
                  <a
                    rel="nofollow"
                  >
                    1
                  </a>
                </li>
                <li
                  aria-disabled="true"
                  class="ant-pagination-next ant-pagination-disabled"
                  title="Next Page"
                >
                  <button
                    class="ant-pagination-item-link"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="right"
                      class="anticon anticon-right"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="right"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="ant-pagination-options"
                >
                  <div
                    aria-label="Page Size"
                    class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-label="Page Size"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          role="combobox"
                          type="search"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                        title="20 / page"
                      >
                        20 / page
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Data/Operation should refresh table when user click refresh button 1`] = `
<div>
  <section
    class="css-1ge35cc"
  >
    <div
      class="actiontech-page-header-namespace css-1xspr0w"
    >
      <div
        class="title"
      >
        权限组
      </div>
      <div
        class="extra"
      />
    </div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-1kh50jg"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center full-width-element flex-space-between actiontech-table-toolbar-namespace css-c38ntt"
              style="flex-wrap: wrap; margin-bottom: -8px;"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px; padding-bottom: 8px;"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <span
                      class="ant-input-affix-wrapper basic-input-wrapper actiontech-table-search-input-namespace css-1f6svkh ant-input-affix-wrapper-sm css-dev-only-do-not-override-mlhibv"
                    >
                      <input
                        class="ant-input ant-input-sm css-dev-only-do-not-override-mlhibv"
                        id="actiontech-table-search-input"
                        placeholder="输入关键字搜索"
                        type="text"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <svg
                          class="custom-icon custom-icon-search"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m10.518 9.693 2.499 2.498-.826.825-2.498-2.498a5.252 5.252 0 0 1-8.527-4.101 5.25 5.25 0 0 1 5.25-5.25 5.252 5.252 0 0 1 4.102 8.526m-1.17-.433a4.082 4.082 0 0 0-2.931-6.927 4.08 4.08 0 0 0-4.084 4.084 4.082 4.082 0 0 0 6.927 2.93z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-czn7jp ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
                      style="padding: 0px 6px 0px 10px;"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-czn7jp ant-space-horizontal ant-space-align-center css-1nt49ug"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 2px;"
                        >
                          筛选
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <svg
                            color="currrentColor"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                              fill="currentColor"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-space-item"
                style="padding-bottom: 8px;"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-1kh50jg ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-czn7jp ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="custom-icon custom-icon-refresh"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
        >
          <div
            class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-container"
            >
              <div
                class="ant-table ant-table-scroll-horizontal"
              >
                <div
                  class="ant-table-container"
                >
                  <div
                    class="ant-table-content"
                    style="overflow-x: auto; overflow-y: hidden;"
                  >
                    <table
                      style="min-width: 100%; table-layout: auto;"
                    >
                      <colgroup>
                        <col
                          style="width: 180px;"
                        />
                        <col
                          style="width: 180px;"
                        />
                        <col
                          style="width: 240px;"
                        />
                        <col
                          style="width: 240px;"
                        />
                      </colgroup>
                      <thead
                        class="ant-table-thead"
                      >
                        <tr>
                          <th
                            class="ant-table-cell"
                            scope="col"
                          >
                            权限组名
                          </th>
                          <th
                            class="ant-table-cell custom-table-cell"
                            scope="col"
                          >
                            权限映射适用种类
                          </th>
                          <th
                            class="ant-table-cell custom-table-cell"
                            scope="col"
                          >
                            适用范围
                          </th>
                          <th
                            class="ant-table-cell custom-table-cell"
                            scope="col"
                          >
                            操作
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="ant-table-tbody"
                      >
                        <tr
                          aria-hidden="true"
                          class="ant-table-measure-row"
                          style="height: 0px; font-size: 0px;"
                        >
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                          <td
                            style="padding: 0px; border: 0px; height: 0px;"
                          >
                            <div
                              style="height: 0px; overflow: hidden;"
                            >
                               
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="27-MySQL,OceanBaseMySQL"
                        >
                          <td
                            class="ant-table-cell"
                          >
                            <span
                              class="ant-typography consolidated-column css-dev-only-do-not-override-bj9uhl"
                            >
                              查询
                            </span>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                MySQL
                              </div>
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                OceanBaseMySQL
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Database
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Table
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Database
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Table
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    select
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    select
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="96-MySQL,OceanBaseMySQL"
                        >
                          <td
                            class="ant-table-cell"
                          >
                            <span
                              class="ant-typography consolidated-column css-dev-only-do-not-override-bj9uhl"
                            >
                              变更
                            </span>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                MySQL
                              </div>
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                OceanBaseMySQL
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Service
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Database
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Table
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    select
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    delete
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    add
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    add
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                        </tr>
                        <tr
                          class="ant-table-row ant-table-row-level-0"
                          data-row-key="36-MySQL,OceanBaseMySQL"
                        >
                          <td
                            class="ant-table-cell"
                          >
                            <span
                              class="ant-typography consolidated-column css-dev-only-do-not-override-bj9uhl"
                            >
                              导出
                            </span>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                MySQL
                              </div>
                              <div
                                class="custom-table-cell-item custom-table-cell-db-type-item"
                              >
                                OceanBaseMySQL
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Database
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Database
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Table
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    Instance
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                          <td
                            class="ant-table-cell custom-table-cell"
                          >
                            <div
                              class="css-cjptql"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    update
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    select
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    remove
                                  </span>
                                </div>
                              </div>
                              <div
                                class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center custom-table-cell-item"
                              >
                                <div
                                  class="ant-space-item"
                                  style="margin-right: 0px;"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    add
                                  </span>
                                </div>
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
                                  >
                                    update
                                  </span>
                                </div>
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
              <ul
                class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
              >
                <li
                  class="ant-pagination-total-text"
                >
                  <span>
                    共 3 条数据
                  </span>
                </li>
                <li
                  aria-disabled="true"
                  class="ant-pagination-prev ant-pagination-disabled"
                  title="Previous Page"
                >
                  <button
                    class="ant-pagination-item-link"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="left"
                      class="anticon anticon-left"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="left"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                  tabindex="0"
                  title="1"
                >
                  <a
                    rel="nofollow"
                  >
                    1
                  </a>
                </li>
                <li
                  aria-disabled="true"
                  class="ant-pagination-next ant-pagination-disabled"
                  title="Next Page"
                >
                  <button
                    class="ant-pagination-item-link"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-label="right"
                      class="anticon anticon-right"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="right"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                        />
                      </svg>
                    </span>
                  </button>
                </li>
                <li
                  class="ant-pagination-options"
                >
                  <div
                    aria-label="Page Size"
                    class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-label="Page Size"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          role="combobox"
                          type="search"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                        title="20 / page"
                      >
                        20 / page
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
